fix(personal-project-scss): Fix alignment

--- a/source/styles/components/component-3/base.scss
+++ b/source/styles/components/component-3/base.scss
@@ -31,9 +31,9 @@
             flex-shrink: 0;
             width: 510px;
             height: 407px;
-            margin-top: -8px;
-            margin-right: 91px;
-            margin-left: -3px;
+            margin-top: -12px;
+            margin-right: 92px;
+            margin-left: -4px;
         }
 
         .content {
@@ -62,7 +62,7 @@
             .list {
                 display: flex;
                 flex-wrap: wrap;
-                margin-left: 2px;
+                margin-left: 1px;
 
                 .item {
                     flex: 200px;
